# SiteManager/public/swagger/swagger.yaml
@@ -6,7 +6,7 @@ info:
     email: ndungudennis250@gmail.com
   version: 1.0.0
 paths:
-  /site-manager-backend/SiteManager/api/register:
+  /api/register:
     post:
       tags:
         - Authentication
@@ -54,7 +54,7 @@ paths:
                     type: object
                     example: The given data was invalid.
                 type: object
-  /site-manager-backend/SiteManager/api/verify:
+  /api/verify:
     post:
       tags:
         - Authentication
@@ -104,7 +104,7 @@ paths:
                     type: string
                     example: Invalid OTP
                 type: object
-  /site-manager-backend/SiteManager/api/setPassword:
+  /api/setPassword:
     post:
       tags:
         - Authentication
@@ -154,7 +154,7 @@ paths:
                     type: string
                     example: Invalid OTP
                 type: object
-  /site-manager-backend/SiteManager/api/login:
+  /api/login:
     post:
       tags:
         - Authentication
@@ -205,7 +205,7 @@ paths:
                     example: Invalid credentials
                 type: object
 
-  /site-manager-backend/SiteManager/api/projects/{siteMagerId}:
+  /api/projects/{siteMagerId}:
     get:
       tags:
         - Projects
@@ -247,7 +247,7 @@ paths:
         '500':
           description: Server error
 
-  /site-manager-backend/SiteManager/api/projects:
+  /api/projects:
     post:
       tags:
         - Projects
@@ -313,7 +313,7 @@ paths:
                     example: The given data was invalid.
                 type: object
 
-  /site-manager-backend/SiteManager/api/projects/details/{projectId}:
+  /api/projects/details/{projectId}:
     get:
       tags:
         - Projects
@@ -353,7 +353,7 @@ paths:
         '500':
           description: Server error
 
-  /site-manager-backend/SiteManager/api/projects/archive/{projectId}/{siteManagerId}:
+  /api/projects/archive/{projectId}/{siteManagerId}:
     delete:
       tags:
         - Projects
@@ -401,7 +401,8 @@ paths:
         '500':
           description: Server error
 
-  /site-manager-backend/SiteManager/api/workers:
+
+  /api/workers:
     post:
       tags:
         - Workers
@@ -467,7 +468,7 @@ paths:
                     example: The given data was invalid.
                 type: object
 
-  /site-manager-backend/SiteManager/api/workers/{siteManagerId}:
+  /api/workers/{siteManagerId}:
     get:
       tags:
         - Workers
@@ -483,6 +484,22 @@ paths:
             type: integer
             format: int64
             example: 1
+        - name: startDate
+          in: query
+          description: The start date
+          required: false
+          schema:
+            type: string
+            format: string
+            example: '2023-07-01'
+        - name: endDate
+          in: query
+          description: The end date
+          required: false
+          schema:
+            type: string
+            format: string
+            example: '2023-10-01'
       responses:
         '200':
           description: Success
@@ -509,7 +526,7 @@ paths:
         '500':
           description: Server error
  
-  /site-manager-backend/SiteManager/api/workers/search/{siteManagerId}/{searchTerm}:
+  /api/workers/search/{siteManagerId}/{searchTerm}:
     get:
       tags:
         - Workers
@@ -558,7 +575,7 @@ paths:
         '500':
           description: Server error
 
-  /site-manager-backend/SiteManager/api/workers/update/{siteManagerId}/{phoneNumber}:
+  /api/workers/update/{siteManagerId}/{phoneNumber}:
     put:
       tags:
         - Workers
@@ -627,7 +644,7 @@ paths:
         '500':
           description: Server error
 
-  /site-manager-backend/SiteManager/api/workers/archive/{siteManagerId}/{phoneNumber}:
+  /api/workers/archive/{siteManagerId}/{phoneNumber}:
     delete:
       tags:
         - Workers
@@ -674,7 +691,7 @@ paths:
         '500':
           description: Server error
 
-  /site-manager-backend/SiteManager/api/clockIn:
+  /api/clockIn:
     post:
       tags:
         - ClockIns
@@ -734,7 +751,7 @@ paths:
         '500':
           description: Server error
           
-  /site-manager-backend/SiteManager/api/clockedInWorkers:
+  /api/clockedInWorkers:
     post:
       tags:
         - ClockIns
@@ -795,8 +812,80 @@ paths:
                 type: object
         '500':
           description: Server error
+  
+  /api/clockedInWorker/{siteManagerId}/{projectId}:
+    get:
+      tags:
+        - ClockIns
+      summary: Get clocked in worker
+      description: Get clocked in worker
+      operationId: getClockedInWorker
+      parameters:
+        - name: siteManagerId
+          in: path
+          description: The site manager id
+          required: true
+          schema:
+            type: integer
+            format: int64
+            example: 1
+        - name: projectId
+          in: path
+          description: The project id
+          required: true
+          schema:
+            type: integer
+            format: int64
+            example: 1
+        - name: startDate
+          in: query
+          description: The start date
+          required: false
+          schema:
+            type: string
+            format: date-time
+            example: '2023-07-20'
+        - name: endDate
+          in: query
+          description: The end date
+          required: false
+          schema:
+            type: string
+            format: date-time
+            example: '2023-07-20'
+        - name: searchQuery
+          in: query
+          description: The search query
+          required: false
+          schema:
+            type: string
+            example: '0700000000'
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                properties:
+                  worker:
+                    type: object
+                    example: The worker details
+                type: object
+        '404':
+          description: No worker found
+          content:
+            application/json:
+              schema:
+                properties:
+                  message:
+                    type: string
+                    example: No worker found
+                type: object
+        '500':
+          description: Server error
+
       
-  /site-manager-backend/SiteManager/api/report/{projectId}:
+  /api/report/{projectId}:
     get:
       tags:
         - Reports
@@ -812,6 +901,22 @@ paths:
             type: integer
             format: int64
             example: 1
+        - name: startDate
+          in: query
+          description: The start date
+          required: false
+          schema:
+            type: string
+            format: date-time
+            example: '2023-07-20'
+        - name: endDate
+          in: query
+          description: The end date
+          required: false
+          schema:
+            type: string
+            format: date-time
+            example: '2023-07-20'
       responses:
         '200':
           description: Report generated successfully
@@ -828,7 +933,55 @@ paths:
         '500':
           description: Server error
 
-  /site-manager-backend/SiteManager/api/siteManager:
+  /api/workerReport/{workerId}:
+    get:
+      tags:
+        - Reports
+      summary: Generate worker report
+      description: Generate worker report
+      operationId: generateWorkerReport
+      parameters:
+        - name: workerId
+          in: path
+          description: The worker id
+          required: true
+          schema:
+            type: integer
+            format: int64
+            example: 1
+        - name: startDate
+          in: query
+          description: The start date
+          required: false
+          schema:
+            type: string
+            format: date-time
+            example: '2023-07-20'
+        - name: endDate
+          in: query
+          description: The end date
+          required: false
+          schema:
+            type: string
+            format: date-time
+            example: '2023-07-20'
+      responses:
+        '200':
+          description: Report generated successfully
+        '404':
+          description: No report found
+          content:
+            application/json:
+              schema:
+                properties:
+                  message:
+                    type: string
+                    example: No report found
+                type: object
+        '500':
+          description: Server error
+
+  /api/siteManager:
     get:
       tags:
         - SiteManagers
